/resources/scss/: fixed problem with top and bottom padding of articles on mobile displays

--- a/resources/scss/_pmp.front.article.scss
+++ b/resources/scss/_pmp.front.article.scss
@@ -200,7 +200,7 @@ $tag-background-active-color:   $blue-dark;
                 padding:                        1em 1.5em;
 
                 @media only screen and (max-width: 991px) {
-                    padding:                    0 1em;
+                    padding:                    1em 1em;
                 }
             }
 
